--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -12,7 +12,7 @@
 
 \IEEEcompsocitemizethanks{\IEEEcompsocthanksitem Robotics Group. University of Le\'{o}n.\protect\\
 
-E-mail: francisco.sedano@unileon.es, gestec00@estudiantes.unileon.es, linyea00@estudiantes.unileon.es, pblanm02@estudiantes.unileon.es, fjrodl@unileon.es}
+E-mail: francisco.sedano@unileon.es, gestc@unileon.es, linyea00@estudiantes.unileon.es, pblanm02@estudiantes.unileon.es, fjrodl@unileon.es}
 }
 
 
@@ -79,7 +79,7 @@ Haptic feedback takes advantage of the human sense of touch by recreating forces
 An haptic device allows to feel a feedback from virtual or real objects and produces a realistic touch sensations to a user. 
 The PHANToM Omni is a 6 DOF haptic device that applies haptic feedback. 
 
-\includegraphics[scale=0.5]{Images/Baxter&HapticSmall.jpg} 
+\includegraphics[scale=0.5]{Images/BaxterYHapticSmall.jpg} 
 
 It has 3 actuated DOF associated to the armature which provides the translational movements (X, Y, and Z Cartesian coordinates) and other 3 non-actuated DOF associated to the gimball  that gives the orientation (pitch, roll and yaw rotational movements).  The characteristic of this device allow to offer a feedback up to a maximum of 3.3N.
 
